@@ -4,6 +4,8 @@ v0.6.0, IN PROGRESS
     - Added "zorder" parameter in the element definition dictionary and `add` method
     - Added `elements.ic` and `elements.multiplexer` functions as replacements to `blackbox` and `mux`. These include more functionality such as adjusting indiviudal pin rotation, color, and inverter bubbles.
     - Upgraded documentation to Sphinx and moved to readthedocs.org at https://schemdraw.readthedocs.io/en/latest/.
+    - New elements: MIC, MOTOR,
+
 
 v0.5.0, 21-Jul-2019
     - Added flowcharting symbol methods to SchemDraw.flow module
